# knomly

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
configs/pipelines/: default.json
configs/providers/: default.json
configs/tools/: plane.json
docs/: index.md
docs/adr/: ADR-003-integration-pattern.md  ADR-004-v1-v2-invariants.md  ADR-005-agentic-layer.md  ADR-006-architectural-invariants.md  ADR-007-multi-tenancy-design.md  index.md
docs/api/: frames.md  pipeline.md  processors.md  providers.md  tools.md
docs/architecture/: ADR-001-HTTP-PIPELINE-ADAPTATION.md
docs/claude-requirements/: 2-1-26-overall.txt  2-1-next-steps-v2.txt  2-1-specific-ops.txt  3-1-26-first-application.txt
docs/concepts/: frames.md  processors.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: custom-processor.md
docs/recipes/: voice-to-chat.md
examples/: README.md  __init__.py  resolver_usage.py
examples/01-simple-pipeline/: main.py
examples/02-voice-standup/: main.py
examples/03-intent-routing/: main.py
examples/04-custom-transport/: main.py
knomly/: __init__.py
knomly/adapters/: __init__.py  base.py  openapi_adapter.py  service_factory.py
knomly/adapters/schemas/: __init__.py  pipeline.py  provider.py  tool.py
knomly/agent/: __init__.py  executor.py  frames.py  memory.py  processor.py  result.py
knomly/app/: __init__.py  dependencies.py  main.py
knomly/app/api/: __init__.py
knomly/app/api/webhooks/: __init__.py  twilio.py
knomly/config/: __init__.py  schemas.py  service.py
knomly/integrations/: __init__.py  base.py
knomly/integrations/plane/: __init__.py  cache.py  client.py  schemas.py
knomly/pipeline/: __init__.py  builder.py  context.py  executor.py  observability.py  pipeline.py  processor.py  ratelimit.py  retry.py  routing.py
knomly/pipeline/frames/: __init__.py  action.py  base.py  error.py  input.py  processing.py  task.py  transcription.py
knomly/pipeline/frames/integrations/: __init__.py
knomly/pipeline/processors/: __init__.py  agent_bridge.py  audio_download.py  confirmation.py  context_enrichment.py  extraction.py  intent_classifier.py  transcription.py  zulip.py
knomly/pipeline/processors/integrations/: __init__.py  plane.py
knomly/pipeline/transports/: __init__.py  protocol.py  registry.py  twilio.py
knomly/providers/: __init__.py  health.py  registry.py
knomly/providers/chat/: __init__.py  base.py  zulip.py
knomly/providers/llm/: __init__.py  base.py  gemini.py  openai.py
knomly/providers/stt/: __init__.py  base.py  deepgram.py  gemini.py  whisper.py
knomly/runtime/: __init__.py  builder.py  loaders.py  resolver.py
knomly/tools/: __init__.py  base.py  factory.py  registry.py  skill.py
knomly/tools/generic/: __init__.py  openapi.py
knomly/tools/plane/: __init__.py  create_task.py  factory.py  query_tasks.py
knomly/utils/: __init__.py  json_parser.py
tests/: __init__.py  conftest.py  e2e_manual_test.py  test_adapters.py  test_agent.py  test_agent_bridge.py  test_context_enrichment.py  test_frames.py  test_intent_classifier.py  test_json_parser.py  test_memory.py  test_observability.py  test_openapi_tool.py  test_pipeline.py  test_plane_integration.py  test_processors.py  test_provider_health.py  test_providers.py  test_ratelimit.py  test_retry.py  test_routing.py  test_runtime.py  test_skill.py  test_tool_factory.py  test_transports.py
